Mini fix de alineamiento con otros componentes
